--- a/style.css
+++ b/style.css
@@ -1,20 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap');
-
+:root {
+  --Black: hsl(212, 21%, 14%);
+  --Grey: hsl(228, 12%, 48%);
+  --Cream: hsl(30, 38%, 92%);
+  --White: hsl(0, 0%, 100%);
+  --Green: hsl(158, 36%, 37%);
+  --DarkGreen:hsl(158, 45%, 20%);
+}
 * {
     padding: 0px;
 }
 
 body {
-    background-color: hsl(30, 38%, 92%);
+    background-color: var(--Cream);
     min-height: 100vh;
     font-size: 14px;
     font-family: "Montserrat", sans-serif;
-    color: hsl(228, 12%, 48%);
+    color: var(--Grey);
 }
 
 h1 {
     font-family: "Fraunces", serif;
-    color: hsl(212, 21%, 14%);
+    color: var(--Black);
     font-size: 2rem;
 }
 
@@ -26,7 +33,7 @@ main {
 }
 
 article {
-    background-color: hsl(0, 0%, 100%);
+    background-color: var(--White);
     display: flex;
     flex-direction: row;
     border-radius: 20px;
@@ -58,7 +65,7 @@ img {
 
 .sale-price {
     font-family: "Fraunces", serif;
-    color:hsl(158, 36%, 37%);
+    color:var(--Green);
     font-size: 1.7rem;
     margin-right: 20px;
 }
@@ -70,8 +77,8 @@ img {
 button {
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
-    background-color: hsl(158, 36%, 37%);
-    color: hsl(0, 0%, 100%);
+    background-color: var(--Green);
+    color: var(--White);
     padding: 20px;
     border-style: none;
     border-radius: 10px;
@@ -80,11 +87,11 @@ button {
 }
 
 button:hover {
-    background-color: hsl(158, 45%, 20%);
+    background-color: var(--Cream);
 }
 
 button:active {
-    background-color: hsl(158, 45%, 20%);
+    background-color: var(--DarkGreen);
 }
 
 .fa-cart-shopping {
@@ -97,7 +104,7 @@ button:active {
 }
 
 .attribution a { 
-    color: hsl(158, 36%, 37%); 
+    color: var(--Green); 
 }
 
 @media only screen and (max-width: 600px) {
